--- a/src/bin/Makefile
+++ b/src/bin/Makefile
@@ -2,6 +2,7 @@
 #
 # Makefile for src/bin (client programs)
 #
+# Portions Copyright (c) 2019, Cybertec Schönig & Schönig GmbH
 # Portions Copyright (c) 1996-2019, PostgreSQL Global Development Group
 # Portions Copyright (c) 1994, Regents of the University of California
 #
