--- a/src/bin/pg_rewind/Makefile
+++ b/src/bin/pg_rewind/Makefile
@@ -2,6 +2,7 @@
 #
 # Makefile for src/bin/pg_rewind
 #
+# Portions Copyright (c) 2019, Cybertec Schönig & Schönig GmbH
 # Portions Copyright (c) 2013-2019, PostgreSQL Global Development Group
 #
 # src/bin/pg_rewind/Makefile
