--- a/GNUmakefile.in
+++ b/GNUmakefile.in
@@ -78,7 +78,7 @@ GNUmakefile: GNUmakefile.in $(top_builddir)/config.status
 
 ##########################################################################
 
-distdir	= postgresql-$(VERSION)
+distdir	= postgresql-cybertec-$(VERSION)
 dummy	= =install=
 
 dist: $(distdir).tar.gz $(distdir).tar.bz2
