Reworked plpgsql_sec so that the password is not required at compile time.
Now we derive the encryption key from the password of the special user
"plpgsql_sec". Thus we can include the plpgsql_sec extension into RPM package.

--- a/contrib/plpgsql_sec/Makefile
+++ b/contrib/plpgsql_sec/Makefile
@@ -14,8 +14,6 @@ OBJS = pl_comp.o pl_handler.o
 EXTENSION = plpgsql_sec
 DATA = plpgsql_sec.control plpgsql_sec--1.0.sql plpgsql_sec--unpackaged--1.0.sql
 DOCS = README.plpgsql_sec
-# passwd.h not included deliberately (if deleted unintentionaly, data becomes
-# inaccessible)
 EXTRA_CLEAN = *~ nls.mk plerrcodes.h generate-plerrcodes.pl
 
 ifdef USE_PGXS
@@ -45,13 +43,8 @@ $(srcdir)/nls.mk:
 	cp $(top_builddir)/src/pl/plpgsql/src/nls.mk $(srcdir)
 
 # Force these dependencies to be known even without dependency info built:
-pl_handler.o pl_comp.o pl_exec.o pl_funcs.o pl_scanner.o: passwd.h \
- plpgsql_sec.h plerrcodes.h $(srcdir)/nls.mk
-
-$(srcdir)/passwd.h:
-	$(CC) -Wall -o pwdgen$(X) pwdgen.c -lcrypt
-	./pwdgen$(X)
-	$(RM) pwdgen$(X)
+pl_handler.o pl_comp.o pl_exec.o pl_funcs.o pl_scanner.o: plpgsql_sec.h \
+plerrcodes.h $(srcdir)/nls.mk
 
 $(srcdir)/generate-plerrcodes.pl:
 	cp $(top_builddir)/src/pl/plpgsql/src/generate-plerrcodes.pl $(srcdir)
